--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,24 @@
 {
     "name": "hexlet/code",
-    "type": "library",
+    "bin": ["bin/brain-games"],
+    "type": "project",
     "authors": [
         {
             "name": "dmitrij",
             "email": "dmitrijvik@gmail.com"
         }
     ],
+    "description": "hexlet php-package",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },
+        
+        "files": ["src/Cli.php"]
     },
     
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.13"
+    }
 }
