change composer.json and src/Cli.php

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "hexlet/code",
-    "bin": ["bin/brain-games"],
+    "bin": ["bin/brain-games",
+	    "bin/brain-even"],
     "type": "project",
     "authors": [
         {
