--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "hexlet/code",
     "bin": ["bin/brain-games",
 	        "bin/brain-even",
-            "bin/brain-calc"],
+            "bin/brain-calc",
+            "bin/brain-gcd"],
     "type": "project",
     "authors": [
         {
@@ -17,7 +18,7 @@
             "Hexlet\\Code\\": "src/"
         },
         
-        "files": ["src/Calc.php"]
+        "files": ["src/Gcd.php"]
         
     },
     
