change Makefile compposer.json also creatin new files brain-prime and Prime.php

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "hexlet/code",
     "bin": ["bin/brain-games",
-	    "bin/brain-even",
+	        "bin/brain-even",
             "bin/brain-calc",
             "bin/brain-gcd",
-	    "bin/brain-progression"],
+	        "bin/brain-progression",
+            "bin/brain-prime"],
     "type": "project",
     "authors": [
         {
@@ -19,7 +20,7 @@
             "Hexlet\\Code\\": "src/"
         },
         
-        "files": ["src/Progression.php"]
+        "files": ["src/Prime.php"]
         
     },
     
